test/libsolidity/syntaxTests/parsing/pragma_illegal.sol
pragma ``;
// ----
// ParserError: (7-8): Token incompatible with Solidity parser as part of pragma directive.
// ParserError: (8-9): Token incompatible with Solidity parser as part of pragma directive.
